[tool.poetry]
name = "nesda-dashboard"
version = "0.1.0"
description = "Dashboard to display Nesda Dataset"
authors = ["suryakandukuri <sudham.surya@gmail.com>"]
readme = "README.md"
packages = [{include = "nesda_dashboard"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.1.0"
streamlit = "^1.26.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
